# graphql-client-server-template

./: .env.dev  .gitignore  docker-compose.yml
client/: package.json
client/src/: App.tsx
client/src/components/Forms/AuthForms/: LoginForm.tsx
client/src/components/NavBar/: index.tsx
server/: pyproject.toml
server/accounts/: forms.py
server/server/: celery.py
server/server/settings/: base.py
